# prg1

./: README.md
pw01/: CMakeLists.txt  main1.cpp  main2.cpp
pw02/: CMakeLists.txt  main.cpp  montantEnToutesLettres.cpp  montantEnToutesLettres.h
pw03/: CMakeLists.txt  README.md  helper.cpp  lm_add.cpp  lm_fromstring.cpp  lm_multiply.cpp  lm_tostring.cpp  longmath.h  main.cpp
pw03/Test/: CMakeLists.txt  catch.hpp  catch_main.cpp  longmathTest.cpp
pw04/: .clang-format  .gitignore  CMakeLists.txt  README.md  USAGE.md  algo.md  gspc.csv
pw04/all/: CMakeLists.txt
pw04/doc/: CMakeLists.txt  conf.py
pw04/doc/pages/: about.dox
pw04/inc/investor/: config.h  data-reader.h  investor.h  percentiles.h  strategies-utils.h  strategies.h  string-utils.h  transactions.h
pw04/src/: config.cpp  data-reader.cpp  investor.cpp  percentiles.cpp  string-utils.cpp  transactions.cpp
pw04/src/strategies/: ema.cpp  factory.cpp  hodl.cpp  ma.cpp  utils.cpp
pw04/standalone/: CMakeLists.txt
pw04/standalone/src/: main.cpp
pw04/test/: CMakeLists.txt
pw04/test/src/: data-reader.cpp  investor.cpp  percentiles.cpp  strategies.cpp  transactions.cpp
pw05/: .gitignore  README.md
pw05/Partie 1 - Frac16/: CMakeLists.txt  Frac16.cpp  Frac16.h  README.md  main.cpp  output.txt
pw05/Partie 2 - Frac/: CMakeLists.txt  Frac.h  FracImpl.h  README.md  main.cpp  output.txt
pw05/Partie 3 - Frac(2)/: CMakeLists.txt  Frac.h  FracImpl.h  FracTypeChooser.h  README.md  main.cpp  output.txt
